style.css
@import url('https://fonts.googleapis.com/css?family=Fredoka+One|Lato:400,900');


:root {
    --primary-color: rgb(220, 20, 60);
    --main-bg: rgb(217, 234, 250);
    --primary-hover: rgb(189, 15, 49);
    --primary-dark: rgb(107, 10, 30);
    --primary-light: rgb(255, 192, 205);
    --row-color: rgb(230, 230, 230);
    --row-hover: rgb(240, 240, 240);
    --placeholder-color: rgb(167, 167, 167);
    --row-font-color: darkslategrey;
    --row-font-color-hover: black;
    --sidebar-bg:  rgb(253, 253, 253);
    --muted: rgb(199, 199, 199);
}


* {
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}


body {
    font-family: 'Lato';
}



nav.mobile-sidebar {
    display: none;
}



.fixed-bottom {
    display: none;
}



nav.navbar {
    display: relative;
    background-color: var(--primary-color);
    color: white;
    width: 100%;
}

nav h1 {
    font-family: 'Fredoka One';
    text-transform: uppercase;
    margin-bottom: 0;
}

.main-navbar i:hover{
    color: var(--primary-light);
}

.red-h1 {
    color: rgb(255, 161, 180);
}

.fa-bars {
    cursor: pointer;
}

i {
    margin-left: 0rem;
    font-size: 1.5rem;
}

.right-corner {
    width: 15rem;
}

.right-corner i {
    font-size: 1rem;
    transition: all .5s;
}
.right-corner i:hover {
    cursor: pointer;
    transition: all .5s;
}

.right-corner img {
    width: 7%;
    border-radius: 100%;
    border: 2px solid white;
    box-shadow: 0px 0px 5px rgba(0,0,0,.5);
}







ul {
    list-style-type: none;
}

nav.sidebar {
    background-color: var(--sidebar-bg) !important;
    height: auto;
    border-right: 1px solid rgb(238, 238, 238);
}

ul.first-level li h2 i {
    font-size: 1.3rem;
    margin-right: 1rem;
}

ul.second-level li span i {
    margin-right: 2rem;
    font-size: 1rem;
}



ul.first-level > li {
    text-transform: uppercase;
    font-weight: bold;
}

li > h2 {
    color: var(--primary-color);
    text-decoration: none;
    font-size: 1rem;
    font-weight: bold;
}
ul.first-level li {
    padding: .9rem 0rem .5rem .7rem;
    color: var(--primary-color);
    cursor: pointer;
}

ul.first-level li:hover {
   background-color: var(--row-hover);
}

ul.second-level li {
    cursor: pointer; 
    margin: .5rem 0rem;   
    padding: .5rem 0rem;
    color: rgb(160, 158, 158);
}

ul.second-level li span {
    margin-left: 2rem;
    font-size: .9rem;
}

hr {
    margin: .5rem;
    padding: 0;
}

ul.second-level li:hover {
    color: darkslategrey;
    background-color: var(--row-hover);

}



.shopping {
    color: blue;
}

.work {
    color: orange;
}

.hobbies {
    color: green;
}

.health {
    color: purple;
}







div.main {
    
    background-color: rgba(255,255,255,.5);
    background:url(round.png);
}


div.main p {
    margin: 0rem;
}
/* div.main .badge {
    margin: 0rem 2rem;
} */

div.main h2 {
    font-weight: bold;
    font-size: 1.6rem;
    color: rgb(39, 39, 39);

}

.all-tasks ul {
    width: 3rem;
}
.all-tasks li {
    border-right: 1px solid rgba(0, 0, 0,.3);
    padding: 0rem 1.5rem;
    height: 1.2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    color: rgb(39, 39, 39);
}

.all-tasks li:hover {
    cursor: pointer;
    color: black;
}

.all-tasks li p {
    font-size: .8rem;
}

.all-tasks i {
    font-size: .9rem;
}

li > p > i {
    margin-right: .5rem;
}

.main-tasks > div {
    background-color: var(--sidebar-bg);
    margin: 0rem 0rem 2rem 0rem;
    padding: 1.5rem 1.2rem;
}

.main-tasks > div i {
    cursor: pointer;
}

body > div.container-fluid > div > div > div.row.mt-4 > div > div > ul > li > span {
    margin: 0rem 1rem;
}

.main-tasks h3 {
    font-weight: bold;
    text-transform: uppercase;
    font-size: 1.5rem;

}

.main-tasks h3 i {
    font-size: 1.5rem;

}

.main-tasks li {
    border: 1px solid rgb(235, 235, 235);
    margin: .7rem 0rem;
    padding: .7rem;
    border-radius: .6rem;
    box-shadow: 1px 1px 3px rgba(0,0,0,.1);
    font-size: .9rem;
}

.main-tasks li i.fa-circle, .main-tasks li i.fa-trash, .main-tasks li i.fa-check-circle {
    font-size: .9rem;
}

/* .main-tasks ul li span {
    margin: 0rem 1rem;
}
 */



.main-tasks .input-group {
    margin-top: 1.5rem;
}

input[type=text], .input-group-text {
    border-radius: 8rem;
    font-size: .9rem;
}

input[type=text]::placeholder {
    border-color: rgb(201,201,201);
    color: rgb(201, 201, 201);
    font-size: .9rem;
    }

.input-group-text i {
    font-size: .9rem;
}

.add-new-task {
    padding-bottom: 0.3rem;
}

.fa-trash {
    color: rgb(160, 158, 158);
}



.done {
    color: rgb(160, 158, 158);
}

.done span {
    text-decoration: line-through;
}

.done span .badge {
    text-decoration: none !important;
    background-color: gray;
}

@media (max-width: 992px) { 

    .sidebar p{
        font-size: .7rem;
    }
    .right-corner img {
        width: 15%;
    }
    .main-tasks > div {
        padding: 1rem .8rem;
    }

    .main-tasks > div h3, .main-tasks > div i {
        font-size: 1.3rem;
    }

    .main-tasks > div li {
        font-size: .8rem;
    }

    .main-tasks > div {
        padding: 1.5rem 1.2rem;
    }

    /* .main-tasks ul li span {
        margin: 0rem 1rem;
    } */

    input[type=text], .input-group-text {
        border-radius: 8rem;
        font-size: .7rem;
    }
    
    input[type=text]::placeholder {
        border-color: rgb(201,201,201);
        color: rgb(201, 201, 201);
        font-size: .7rem;
        }
    
    .input-group-text i {
        font-size: .7rem !important;
    }

    ul.first-level h2 {
        font-size: 1.1rem;
    }

    ul.first-level li h2 i {
        font-size: 1.1rem;
    }
    ul.second-level li span {
        font-size: .9rem;
    }
    ul.second-level li span i {
        font-size: 1rem;
    }
 }

 @media (max-width: 2500px) {
    .right-corner img {
        width: 2.3rem;
    }
 }


 @media (max-width: 1500px) {
    .right-corner img {
        width: 2.5rem;
    }
 }

 @media (max-width: 1200px) {
    .right-corner img {
        width: 2.5rem;
    }
 }

@media (max-width: 767px) {
   
    .right-corner {
        width: auto;
    }
    nav.mobile-sidebar {
        display: inline;
    }
    div.row.mt-5 {
        position: relative;
        top: .5rem;
    }
    .mobile-sidebar {
        border-bottom: .05rem solid rgb(233, 233, 233);
    }
    .mobile-categories {
        display: flex;
        align-items: center;
        justify-content: space-around;
        padding-top: 1rem;
    }

    .mobile-categories li {
        text-align: center;
        display: flex;
        justify-content: center;
        align-items: center;
        cursor: pointer;
        box-shadow: 1px 1px 2px rgba(0, 0, 0,.2);
        opacity: .5;
        transition: all .3s;
    }

    .mobile-categories li button {
        font-weight: bold;
    }

    .mobile-categories li:hover {
        opacity: 1;
        transition: all .3s ease-in-out;
    }

    .mobile-cat-shopping {
        background-color: rgba(0,0,255);
    }

    .mobile-cat-work {
        background-color: rgba(255, 165, 0);
    }

    .mobile-cat-hobbies {
        background-color: green;
    }

    .mobile-cat-health {
        background-color: purple;
    }
   
    .fixed-bottom {
        display: inline;
        background-color: var(--sidebar-bg) !important;
        border-top: .05rem solid rgb(233, 233, 233);

    }

    .fixed-bottom ul {
        margin-bottom: 0rem;
        display: flex;
        justify-content: space-around;
        align-items: center;
    }

    .fixed-bottom ul li {
        padding: .3rem;
    }

    .fixed-bottom i {
        font-size: 1.5rem;
        color: var(--muted);
    }

    .fixed-bottom i:hover {
        cursor: pointer;
        color: rgba(0,0,0,.7);
    }

    .fixed-bottom i.fa-plus-circle {
        font-size: 2.5rem;
        color: var(--primary-color);
        text-shadow: 1px 1px 2px rgba(0,0,0,.2);
    }

    .fixed-bottom i.fa-plus-circle:hover {
        color: var(--primary-hover);
    }

   
    .right-corner i {
        display: none !important;
    }

    .right-corner img {
        width: 2rem;
    }

    .main-navbar h1 {
        font-size: 1.5rem;
    }

    .main-navbar h1 i {
        font-size: 0.8em;
        position: relative;
        top: -.05rem;
    }

   
    .sidebar {
        display: none;
    }

    .main .row:nth-child(1) {
        display: none;
    }
   
    div.row.mt-4 {
        margin-top: 0rem !important;
    }
    .main {
        padding: 1rem !important;

    }

    div.row.mt-5 {
        margin-top: 3.7rem !important;
    }
    .main-tasks div h3, .main-tasks div h3 i {
        font-size: 1.4rem !important;
    }
   
 }




 @media (max-width: 670px) { 
    div.row.mt-5 {
       position: relative;
       top: -.2rem;
    }

    .right-corner img {
        width: 2.4rem;
    }
    
}

@media (max-width: 550px) { 
    div.row.mt-5 {
       position: relative;
       top: -.8rem;
    }

    .right-corner img {
        width: 2.1rem;
    }
}

 @media (max-width: 425px) { 
     div.row.mt-5 {
        position: relative;
        top: -.5rem;
     }
     .right-corner img {
        width: 2.1rem;
    }
 }

 @media (max-width: 375px) { 
    div.row.mt-5 {
       position: relative;
       top: -.8rem;
    }
    .right-corner img {
        width: 2.1rem;
    }
}

    @media (max-width: 320px) { 
        div.row.mt-5 {
           position: relative;
           top: -.9rem;
        }

        .right-corner img {
            width: 2rem;
        }
}



h4,
modal-title { font-size: 1.5rem !important; font-weight: bold; color: var(--primary-color);
text-transform: uppercase }

.no-borders { border: 0px; }
.body-message { font-size: 18px; }
.centered { text-align: center; }


.modal-body label {
    font-weight: bold;
    font-size: .9rem;
}

select#inputGroupSelect02.custom-select {
    font-size: .8rem;
}

.modal-body input::placeholder {
    font-size: 0.8rem;
}
i.fas.fa-check-circle::before {
    font-size: 1.2rem;
    position: relative;
    bottom: .05rem;
}

.modal-body select option {
    font-size: .8rem;
}

